--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,7 +36,7 @@ services:
   postgres:
     image: postgres:14-alpine
     ports:
-      - 5444:5432
+      - ${POSTGRES_PORT}:5432
     environment:
       - POSTGRES_PASSWORD=lo-exc
       - POSTGRES_USER=lo-exc
@@ -47,13 +47,13 @@ services:
   postgres_test:
     image: postgres:14-alpine
     ports:
-      - 5445:5432
+      - ${TEST_POSTGRES_PORT}:5432
     environment:
       - POSTGRES_PASSWORD=lo-exc
       - POSTGRES_USER=lo-exc
       - POSTGRES_DB=lo-exc
     volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - backend
 
